--- a/app/views/static_pages/attire.html.erb
+++ b/app/views/static_pages/attire.html.erb
@@ -1,8 +1,8 @@
 <div class="jennasue">
 	<h2 class="browntext"><b>Attire</b></h2>
 </div>
-<p class="blocktext">The dress code is “summer garden party”. We’re envisaging a semi-formal occasion in a relaxed and outdoorsy setting. We’re happy for you to interpret this however you like. If you’re after some more assistance:
-</p></br>
+<p class="blocktext">The dress code is “summer garden party”. We’re envisaging a semi-formal occasion in a relaxed and outdoorsy setting. We’re happy for you to interpret this however you like. Bear in mind that this is Melbourne - it could be 40 degrees. Or 14. Best to check the weather a few days out .... and plan for both anyway.</p> 
+<p class="blocktext">If you’re after some more assistance:</p></br>
 <div class="jennasue">
   <h4 class="leftalign greentext">Guys</h4>
 </div>
@@ -16,4 +16,3 @@
 	<p class="blocktext"><strong>Not quite ideal:</strong> Ball gowns. Full length white dresses*.</p>
 	<p class="blocktext">*Brides excepted</p></br>
 
-<p class="blocktext">Bear in mind that this is Melbourne - it could be 40 degrees. Or 14. Best to check the weather a few days out .... and plan for both anyway.</p> 
