--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,7 @@
 <% provide(:title, "contact") %>
-<h2 class="jennasue browntext"><b>Contact Details</b></h2>
+<div class="jennasue">
+  <h2 class="browntext"><b>Contact Details</b></h2>
+</div>
 <p>Seriously? </br>
 If you don't already have appropriate contact details you probably aren't actually invited....</p>
 <p>No, it's ok.  If you've got any questions just call us, or email us at <%= mail_to "carlaandchristietheknot@gmail.com"%>.<p>
