--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -281,6 +281,12 @@ aside {
     margin-bottom: 5px;	
   };
 }
+
+.dropdownform {
+  padding: 0px;
+  background-color: #ffffff;
+}
+
 /* block text */
 .blocktext {
   text-align: justify;
@@ -344,3 +350,4 @@ aside {
     color: black; }
     .apple_pagination a:hover, .apple_pagination a:focus {
       text-decoration: underline; }
+
