--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,16 +21,13 @@ Kindly RSVP by checking the appropriate boxes below.  If you'll be joining us, p
           <tr>
             <td><%= builder.text_field :name, placeholder: "Guest name" %></td>
             <td>
-              <%= builder.radio_button :wedding, "true" %> Woohoo! I'm there!</br>
-              <%= builder.radio_button :wedding, "false" %> I'm a bad friend
+              <%= builder.select(:wedding, [['Count me in!', true], ['Sadly, no', false]], {}, class: "dropdownform") %>
             </td>
             <td>
-              <%= builder.radio_button :brunch, "true" %> Yes please!</br>
-              <%= builder.radio_button :brunch, "false" %> No thanks
+              <%= builder.select(:brunch, [['Yes please!', true], ['No thanks', false]], {}, class: "dropdownform") %>
             </td>
             <td>
-              <%= builder.radio_button :bus, "true" %> Yes please!</br>
-              <%= builder.radio_button :bus, "false" %> No thanks
+              <%= builder.select(:bus, [['Yes please!', true], ['No thanks', false]], {}, class: "dropdownform") %>
             </td>
             <td><%= builder.text_field :diet, placeholder: "Dietary fussiness" %></td>
           </tr>
