--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,6 +27,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Guest List", guests_path %></li>
+                <li><%= link_to "User Account List", users_path %></li>
                 <li><%= link_to "Add guest", newguest_path %></li>
 				<li><%= link_to "Registry", registry_path %></li>
 			  </ul>
