--- a/app/views/static_pages/registry.html.erb
+++ b/app/views/static_pages/registry.html.erb
@@ -1,5 +1,6 @@
+<% provide(:title, "Gifts") %>
 <div class="jennasue" >
-  <h2 "browntext"><b>Gift Registry</b></h2>
+  <h2 class="browntext"><b>Gift Registry</b></h2>
 </div>
 <p class="blocktext">
 	Many of you will be travelling an awfully long way to be there on our wedding day. Even more of you have already helped us out with various aspects of the wedding. Your presence at the wedding is the most important thing to us; gifts are not expected and certainly not necessary.</br>
