--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,10 @@
-<li>
-	<%= link_to user.name, user %>
-	<% if current_user.admin? && !current_user?(user) %>
-	  <%= link_to "delete", user, method: :delete,
+<tr>
+<td><%= link_to user.name, user %></td>
+<td><%= user.guests.count %></td>
+<% if current_user.admin? && !current_user?(user) %>
+  <td>
+    <%= link_to "remove", user, method: :delete,
 									data: { confirm: "Are you sure?"}%>
 	<% end %>
-</li>
+ </td>
+</tr>
