--- a/app/views/static_pages/details.html.erb
+++ b/app/views/static_pages/details.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Details") %>
 <div class="jennasue">
   <h2 class="greentext"><b>The main game</b></h2>  
 	<h4 class="browntext">Saturday 4 January 2014</h4>
