Redone registry details

--- a/app/views/static_pages/accomodation.html.erb
+++ b/app/views/static_pages/accomodation.html.erb
@@ -6,7 +6,7 @@
   <p class="blocktext">We will organise a mini bus to pick up / drop off guests at the Quality Inn TabCorp Park. Please let us know when you <%= link_to "RSVP", current_user %> whether or not you’ll need a seat on the bus. 
 </p>
 <div class="jennasue">
-  <h4 class="greentext"><b>Grounds of Boyd Baker House</b></h4>
+  <h4 class="greentext">Grounds of Boyd Baker House</h4>
 </div>
   <p class="blocktext">
 Bring a tent. Pitch it where you like. There are several bathrooms in the main house. 
@@ -16,7 +16,7 @@ If you’d like to camp but can’t get your hands on a tent, let us know and we
   </p></br>
 
 <div class="jennasue">
-  <h4 class="greentext"><b>Other Accommodation Options</b></h4>
+  <h4 class="greentext">Other Accommodation Options</h4>
 </div>
 <table class="table">
 <tr >
