--- a/app/views/static_pages/registry.html.erb
+++ b/app/views/static_pages/registry.html.erb
@@ -1,27 +1,20 @@
 <% provide(:title, "Gifts") %>
 <div class="jennasue" >
-  <h2 class="browntext"><b>Gift Registry</b></h2>
+  <h2 class="browntext"><b>Gifts</b></h2>
 </div>
 <p class="blocktext">
-	Many of you will be travelling an awfully long way to be there on our wedding day. Even more of you have already helped us out with various aspects of the wedding. Your presence at the wedding is the most important thing to us; gifts are not expected and certainly not necessary.</br>
-	Some people have told us that they are keen to buy us a gift in any event and would like some guidance as to what we could use.</p>
+	Many of you will be travelling an awfully long way to be there on our wedding day. Even more of you have already helped us out with various aspects of the wedding. Your presence at the wedding is the most important thing to us; and gifts are neither expected nor necessary. Some people have told us that they are keen to buy us a gift in any event, and would like some guidance as to what we could use. To that end, we have come up with the following...</p>
 <div class="jennasue">
-  <h4 class="greentext"><b>Honeymoon help</b></h4>
+  <h4 class="greentext">Honeymoon help</h4>
 </div>
 	<p class="blocktext">
-	We are stretching ourselves a bit in honeymoon planning and have decided to head to Tanzania for a mix of climbing, safari and beach time. We would be really pleased to receive a contribution towards our honeymoon and will have a safari suitcase at the venue for this purpose (since that sounds more intrepid than a ‘wishing well’). </p>
+	We have stretched ourselves a bit financially in honeymoon planning and are heading to Tanzania for a mix of hiking, safari and beach time. We  would be delighted to receive a contribution towards our honeymoon and will have a safari suitcase at the venue for this purpose (since that sounds more intrepid than a ‘wishing well’). Any contributions would allow us some extra room to spoil ourselves with add-ons such as a 'night drive' on safari, a restorative massage after our mountain climbing, diving off the coast of Zanzibar or a romantic dinner for 2 on the beach.</p>
 <div class="jennasue">
-<h4 class="greentext"><b>Things for the home</b></h4>
+<h4 class="greentext">For our home</h4>
 </div>
-	<p class="blocktext">
-	We are also still essentially living in a student house and would love some help to upgrade to grown-up goods. The sorts of things we’d like to purchase include:
-		<ol>
-			<li>Couch</li>
-			<li>Table & chairs</li>
-			<li>Soup spoons</li>
-			<li>Champagne glasses</li>
-			<li>Cutlery</li>
-			<li>Salad servers / serving spoons</li>
-		</ol>
-	</p>
-<p class="blocktext">We also drink an awful lot of wine, so frequently run out...</p>
+<p class="blocktext">
+	We are also still essentially living in a student house and would love some help to upgrade to grown-up goods. The sorts of 'big ticket' items we’d like to purchase include couches, a table and chairs, a bbq, and maybe some artwork. A contribution to any of these items would be greatly appreciated. </p>
+<div class="jennasue">
+	<h4 class="greentext">Can we be more specific?</h4>
+</div>
+<p class="blocktext">In addition to our honeymoon and larger purchases, there are a number of specific items we'd be delighted to have. We have set up a gift registry which you can <a href="http://us.marriagegiftlist.com/">access online here</a>.  Login with registry number 89, and either of our surnames. The registry is essentially just an online list which includes suggestions of where the items can be found. However, if you can get the item elsewhere more easily or economically, please do so! If you do purchase anything from this registry, please make sure you confirm this on website, so that the item is marked off.</p>
