--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,6 +14,7 @@
               <ul class="dropdown-menu">
                 <li><%= link_to "Wedding details", details_path %></li>
                 <li><%= link_to "Attire", attire_path %></li>
+                <li><%= link_to "Gifts", registry_path %></li>
                 <li><%= link_to "Getting there", directions_path %></li>
 				        <li><%= link_to "Accommodation", accomodation_path %></li>
                 <li><%= link_to "Things to do", other_path %></li>
@@ -29,7 +30,6 @@
                 <li><%= link_to "Guest List", guests_path %></li>
                 <li><%= link_to "User Account List", users_path %></li>
                 <li><%= link_to "Add guest", newguest_path %></li>
-				<li><%= link_to "Registry", registry_path %></li>
 			  </ul>
 		    </li>
       <% end %>
