--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<%=html_escape provide(:title, @user.name) %>
+<%= provide(:title, @user.name) %>
 <div class="jennasue">
   <h4 class="browntext">Carla Aumann and Chris Stewart cordially invite</h4>
   <h2 class="greentext"><b><%= @user.name %></b></h2>
