Small content edit

--- a/app/views/static_pages/details.html.erb
+++ b/app/views/static_pages/details.html.erb
@@ -3,7 +3,7 @@
   <h2 class="greentext"><b>The main game</b></h2>  
 	<h4 class="browntext">Saturday 4 January 2014</h4>
 </div>
-<p class="blocktext">The wedding ceremony and reception both will be located at <%= link_to "Boyd Baker House", directions_path %>, a masterpiece of modern engineering, and including such modern marvels as walls, floor, and roof.  Please be there in plenty of time for a 4:30pm ceremony.</p>
+<p class="blocktext">The wedding ceremony and reception both will be located on the grounds of the <%= link_to "Boyd Baker House", directions_path %>, a masterpiece of modern engineering, and including such modern marvels as walls, floor, and roof.  Please be there in plenty of time for a 4:30pm ceremony. Weather permitting, the ceremony will be held in the bushland just a 50m walk from the main house.</p>
 	<p class="blocktext">The ceremony will be followed by drinks and canapes, with dinner served around 7pm.</p>
 	<p class="blocktext">You will be expected on the dance floor after dinner.</p>
 
