Interim edits & admin access including guest delete

--- a/app/views/static_pages/registry.html.erb
+++ b/app/views/static_pages/registry.html.erb
@@ -13,8 +13,11 @@
 <h4 class="greentext">For our home</h4>
 </div>
 <p class="blocktext">
-	We are also still essentially living in a student house and would love some help to upgrade to grown-up goods. The sorts of 'big ticket' items we’d like to purchase include couches, a table and chairs, a bbq, and maybe some artwork. A contribution to any of these items would be greatly appreciated. </p>
+	We are also still essentially living in a student house and would love some help to upgrade to grown-up goods. The sorts of 'big ticket' items we’d like to purchase include couches, a table and chairs, and maybe some artwork. A contribution to any of these items would be greatly appreciated. </p>
 <div class="jennasue">
 	<h4 class="greentext">Can we be more specific?</h4>
 </div>
-<p class="blocktext">In addition to our honeymoon and larger purchases, there are a number of specific items we'd be delighted to have. We have set up a gift registry which you can <a href="http://us.marriagegiftlist.com/">access online here</a>.  Login with registry number 89, and either of our surnames. The registry is essentially just an online list which includes suggestions of where the items can be found. However, if you can get the item elsewhere more easily or economically, please do so! If you do purchase anything from this registry, please make sure you confirm this on website, so that the item is marked off.</p>
+<p class="blocktext">
+	In addition to our honeymoon and larger purchases, there are a number of specific items we'd be delighted to have. We have set up a gift registry with some tableware we would love to own at the Fitzroy store of Mud Australia. A copy of the registry is linked here (it's not actually. Carla and Chris haven't given me the link yet) and you can contact the very helpful ladies at the store on <%= mail_to "fitzroy@mudaustralia.com" %>, by phone (+61 3 9419 5161) or by going in. They've asked us to mention that the store is closed between 24 December 2014 and 2 January 2014, to save anyone travelling there only to find a closed shop!
+</p>
+<p class="blocktext">IWe've also put together an online registry of assorted items <a href="http://us.marriagegiftlist.com/">here</a>. Login with registry number 89, and either of our surnames. The list includes suggestions of where the items can be found, however if you can get the item elsewhere more easily or economically, please do so! If you do purchase anything from the list, please make sure you confirm this on website, so that the item is marked off.</p>
