--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -11,6 +11,8 @@
 		<th>Brunch</th>
 		<th>Bus</th>
 		<th>Dietary Restrictions</th>
+		<th>Delete?<th>
+		
 	</tr>
 	<%= will_paginate %>
 	<% @guests.each do |f| %>	
@@ -20,6 +22,9 @@
 		<td><%= human_boolean(f.brunch) %></td>
 		<td><%= human_boolean(f.bus) %></td>
 		<td><%= f.diet %></td>
+		<td><%= f.delete %></td>
+
+
 	</tr>
 	<% end %>
 </table>
