Partial index update

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -309,6 +309,13 @@ aside {
   text-align: left;
 }
 
+.textcenter {
+  text-align: center;
+}
+
+.rightalign {
+  text-align: right;
+}
 .jennasue {
   font-family: 'jenna_sueregular';
   font-size: 30px;
