--- a/app/views/static_pages/registry.html.erb
+++ b/app/views/static_pages/registry.html.erb
@@ -5,15 +5,10 @@
 <p class="blocktext">
 	Many of you will be travelling an awfully long way to be there on our wedding day. Even more of you have already helped us out with various aspects of the wedding. Your presence at the wedding is the most important thing to us; and gifts are neither expected nor necessary. Some people have told us that they are keen to buy us a gift in any event, and would like some guidance as to what we could use. To that end, we have come up with the following...</p>
 <div class="jennasue">
-  <h4 class="greentext">Honeymoon help</h4>
+  <h4 class="greentext">Honeymoon help and grown-up goods</h4>
 </div>
 	<p class="blocktext">
-	We have stretched ourselves a bit financially in honeymoon planning and are heading to Tanzania for a mix of hiking, safari and beach time. We  would be delighted to receive a contribution towards our honeymoon and will have a safari suitcase at the venue for this purpose (since that sounds more intrepid than a ‘wishing well’). Any contributions would allow us some extra room to spoil ourselves with add-ons such as a 'night drive' on safari, a restorative massage after our mountain climbing, diving off the coast of Zanzibar or a romantic dinner for 2 on the beach.</p>
-<div class="jennasue">
-<h4 class="greentext">For our home</h4>
-</div>
-<p class="blocktext">
-	We are also still essentially living in a student house and would love some help to upgrade to grown-up goods. The sorts of 'big ticket' items we’d like to purchase include couches, a table and chairs, and maybe some artwork. A contribution to any of these items would be greatly appreciated. </p>
+	We have stretched ourselves a bit financially in honeymoon planning and are heading to Tanzania for a mix of hiking, safari and beach time. We would be delighted to receive a contribution towards our honeymoon, which we would put towards add-ons such as a 'night drive' on safari, a restorative massage after our mountain climbing, diving off the coast of Zanzibar or a dinner for 2 on the beach. We are also essentially still living in a student house and would love a contribution to help us purchase a new couch, or table and chairs.</p>
 <div class="jennasue">
 	<h4 class="greentext">Can we be more specific?</h4>
 </div>
