--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -1,25 +1,56 @@
 
-<h2 class="browntext">In total you've invited <%= @guests.count %> people:</h2>
-<h4 class="greentext">A total of <%= pluralize(@guests.where(wedding: nil).count, "guest") %> have not yet responded.</h4>
-<h4 class="greentext">A total of <%= pluralize(@guests.where(wedding: false).count, "guest") %> are not attending.</h4>
+<h2 class="browntext">In total you've invited <%= @guests.count %> people</h2>
+<div class="span5">
+<table class="table textcenter">
+  <tr>
+	<th class="greentext">Attending</th>
+	<th class="greentext">Piking</th>
+	<th class="greentext">Unresponsive</th>
+  </tr>
+  <tr>
+  	<td><%= @guests.where(wedding: true).count %></td>
+  	<td><%= @guests.where(wedding: false).count %></td>
+  	<td><%= @guests.where(wedding: nil).count %></td>
+  </tr>
+</table>
 <h5 class="browntext">Download the guest list: <%= link_to "CSV", guests_path(format: "csv") %> | <%= link_to "Excel", guests_path(format: "xls", page: params[:page]) %> </h5>
-<h3 class="greentext">Attending (<%= @guests.where(wedding: true).count %>)</h3>
-<table class="table">
-    <tr><h3 class="greentext">Full Guest List</h3></tr>
-		<th>Guest</th>
-		<th>Wedding</th>
-		<th>Brunch</th>
-		<th>Bus</th>
-		<th>Dietary Restrictions</th>
-	</tr>
-	<%= will_paginate %>
-	<% @guests.each do |f| %>	
+</div>
+
+	
+
+<div class="span6">
+  <table class="table">
 	<tr>
-		<td><%= f.name %></td>
-		<td><%= human_boolean(f.wedding) %></td>
-		<td><%= human_boolean(f.brunch) %></td>
-		<td><%= human_boolean(f.bus) %></td>
-		<td><%= f.diet %></td>
+	  <td></td>
+	  <td><h3 class="greentext span1 rightalign">Filter</h3></td>
+	  <%= search_form_for @search do |f| %>
+	  <td><div class="dropdownlist span3">
+		<%= f.select :wedding_eq, options_for_select([['All Guests', ''],['Confirmed attending', true], ['Not attending', false]], :selected => :wedding) %>
+		<td><%= f.submit "Filter", class: "btn btn-medium btn-primary"  %></td>
+	</tr>
+	<% end %>
+  </table>
+</div>
+
+<table class="table">
+    <tr>
+		<th><%= sort_link @search, :name, "Guest" %></th>
+		<th><%= sort_link @search, :wedding, "RSVP" %></th>
+		<th><%= sort_link @search, :brunch, "Brunch" %></th>
+		<th><%= sort_link @search, :bus, "Bus" %></th>
+		<th><%= sort_link @search, :diet, "Dietary Restrictions" %></th>
+	</tr>
+
+	<% @guests.each do |b| %>	
+	
+	<tr>
+		<td><%= b.name %></td>
+		<td><%= human_boolean(b.wedding) %></td>
+		<td><%= human_boolean(b.brunch) %></td>
+		<td><%= human_boolean(b.bus) %></td>
+		<td><%= b.diet %></td>
 	</tr>
 	<% end %>
 </table>
+
+
