--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -38,6 +38,11 @@ Kindly RSVP by checking the appropriate boxes below.  If you'll be joining us, p
     <% end %>
   </div>
 </div>
+
+<% if current_user.admin? %>
+  <%= render 'shared/guest_form' %>
+<% end %>
+
  <p>Check out the <%= link_to "fine print", details_path %>, or update your <%= link_to "account settings", edit_user_path(current_user) %>.</p>
 </div>
 
